--- a/index.html
+++ b/index.html
@@ -10,46 +10,56 @@
     <nav class="bg-pink-600 text-white flex justify-between py-2">
       <img src="images/logo/logo2.png" class="h-10 px-2 items-center mx-2" />
       <ul class="px-28 py-2 flex space-x-12 justify-end">
-        <li class="cursor-pointer hover:text-gray-400 hover:bg-blue-400">
+        <li class="cursor-pointer hover:text-pink-500 hover:bg-white px-2 font-semibold">
           HOME
         </li>
-        <li class="cursor-pointer hover:text-gray-400 hover:bg-red-600">
-          SERVICES
+        <li class="cursor-pointer  hover:text-pink-500 hover:bg-white px-2 font-semibold">
+          EBooks
         </li>
-        <li class="cursor-pointer hover:text-gray-400 hover:bg-red-600">
+        <li class="cursor-pointer  hover:text-pink-500 hover:bg-white px-2 font-semibold">
           ABOUT
         </li>
-        <li class="cursor-pointer hover:text-gray-400 hover:bg-red-600">
-          CONTACT US
+        <li class="cursor-pointer  hover:text-pink-500 hover:bg-white px-2 font-semibold">
+        Contact Us
         </li>
+        <li class="cursor-pointer hover:text-pink-400 hover:bg-white px-2 font font-semibold">Book Exchange</li>
       </ul>
     </nav>
-    <main class="bg-gray-300 flex justify-around">
+    <main class="bg-gradient-to-tr from-gray-300 to-stone-300 flex justify-around">
+
+     
+
+
+
+
+
       <!-- Rest of your content here -->
 
       <div class="content flex-1 p-8 items-center">
         <div
           class="text-6xl px-8 text-clip font-extrabold flex justify-center my-4 animate-none"
         >
-          MI<span class="text-red-600">E</span>T Bookstore
+          MI<span class="text-red-600">E</span>T  
+          <span class="text-violet-700 ml-4"> Bookstore</span>
         </div>
+        <br>
         <p
-          class="px-7 py-3 w-2/3 text-centre flex justify-center mx-20 font text-black"
+          class="px-7 py-3 w-2/3 text-centre flex justify-center mx-20  text-black "
         >
           "Discover a world of endless possibilities at our online bookstore.
           Explore, learn, and ignite your imagination with our curated
           collection. Start your reading adventure today"
         </p>
-        <div class="button my-4 px-5 mx-20 flex justify-items-center">
+        <div class="button my-9 px-5 mx-14 flex justify-items-center">
           <button
-            class="bg-green-600 rounded-2xl text-white hover:bg-blue-600 py-3 px-2 mx-2 transition-all"
+            class="bg-green-600 rounded-2xl text-white hover:bg-blue-600 py-4 px-4 mx-6  transition-all"
           >
             Buy Now
           </button>
           <button
-            class="bg-red-600 rounded-2xl text-white py-3 px-2 mx-2 transition-all"
+            class="bg-red-600 rounded-2xl text-white py-4 px-4 mx-5 transition-all"
           >
-            Contact Us
+            Sell Now
           </button>
         </div>
       </div>
@@ -62,13 +72,21 @@
         />
       </div>
     </main>
-    <section class="text-gray-600 body-font">
-      <div class="container px-5 py-24 mx-auto">
-        <div class="flex flex-wrap -m-4">
+    <hr>
+
+    <!-- creating another class so that we can give the 
+    background image for our bottom page -->
+    <div class="bg-gradient-to-b from-rose-500 to-rose-300">
+
+
+      <!-- code for the box -->
+      <section class="text-gray-600 body-font">
+        <div class="container px-5 py-24 mx-auto">
+          <div class="flex flex-wrap -m-4">
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <a class="block relative h-48 rounded overflow-hidden">
               <img
-                alt="ecommerce"
+              alt="ecommerce"
                 class="object-cover object-center w-full h-full block"
                 src="https://dummyimage.com/420x260"
               />
@@ -89,7 +107,7 @@
                 alt="ecommerce"
                 class="object-cover object-center w-full h-full block"
                 src="https://dummyimage.com/421x261"
-              />
+                />
             </a>
             <div class="mt-4">
               <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">
@@ -98,16 +116,16 @@
               <h2 class="text-gray-900 title-font text-lg font-medium">
                 Shooting Stars
               </h2>
-              <p class="mt-1">$21.15</p>
+              <p class="mt-1">Rs21.15</p>
             </div>
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <a class="block relative h-48 rounded overflow-hidden">
               <img
-                alt="ecommerce"
+              alt="ecommerce"
                 class="object-cover object-center w-full h-full block"
                 src="https://dummyimage.com/422x262"
-              />
+                />
             </a>
             <div class="mt-4">
               <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">
@@ -116,7 +134,7 @@
               <h2 class="text-gray-900 title-font text-lg font-medium">
                 Neptune
               </h2>
-              <p class="mt-1">$12.00</p>
+              <p class="mt-1">$Rs12.00</p>
             </div>
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
@@ -125,12 +143,12 @@
                 alt="ecommerce"
                 class="object-cover object-center w-full h-full block"
                 src="https://dummyimage.com/423x263"
-              />
-            </a>
-            <div class="mt-4">
-              <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">
-                CATEGORY
-              </h3>
+                />
+              </a>
+              <div class="mt-4">
+                <h3 class="text-gray-500 text-xs tracking-widest title-font mb-1">
+                  CATEGORY
+                </h3>
               <h2 class="text-gray-900 title-font text-lg font-medium">
                 The 400 Blows
               </h2>
@@ -152,15 +170,15 @@
               <h2 class="text-gray-900 title-font text-lg font-medium">
                 The Catalyzer
               </h2>
-              <p class="mt-1">$16.00</p>
+              <p class="mt-1">$Rs30.00</p>
             </div>
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <a class="block relative h-48 rounded overflow-hidden">
               <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src="https://dummyimage.com/425x265"
+              alt="ecommerce"
+              class="object-cover object-center w-full h-full block"
+              src="https://dummyimage.com/425x265"
               />
             </a>
             <div class="mt-4">
@@ -170,15 +188,15 @@
               <h2 class="text-gray-900 title-font text-lg font-medium">
                 Shooting Stars
               </h2>
-              <p class="mt-1">$21.15</p>
+              <p class="mt-1">$Rs21.15</p>
             </div>
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <a class="block relative h-48 rounded overflow-hidden">
               <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
-                src="https://dummyimage.com/427x267"
+              alt="ecommerce"
+              class="object-cover object-center w-full h-full block"
+              src="https://dummyimage.com/427x267"
               />
             </a>
             <div class="mt-4">
@@ -188,14 +206,14 @@
               <h2 class="text-gray-900 title-font text-lg font-medium">
                 Neptune
               </h2>
-              <p class="mt-1">$12.00</p>
+              <p class="mt-1">$Rs12.00</p>
             </div>
           </div>
           <div class="lg:w-1/4 md:w-1/2 p-4 w-full">
             <a class="block relative h-48 rounded overflow-hidden">
               <img
-                alt="ecommerce"
-                class="object-cover object-center w-full h-full block"
+              alt="ecommerce"
+              class="object-cover object-center w-full h-full block"
                 src="https://dummyimage.com/428x268"
               />
             </a>
@@ -206,11 +224,13 @@
               <h2 class="text-gray-900 title-font text-lg font-medium">
                 The 400 Blows
               </h2>
-              <p class="mt-1">$18.40</p>
+              <p class="mt-1">$Rs18.40</p>
             </div>
+            <!-- Code of the box ends -->
           </div>
         </div>
       </div>
     </section>
+  </div>
   </body>
-</html>
+  </html>
