--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
     <title>Miet Bookstore</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    
-    
   </head>
   <body>
-    <nav class="bg-pink-600 text-white flex justify-between py-2 sm:bg-pink-600">
+    <nav class="bg-pink-600 text-white flex justify-between py-2 sm:bg-slate-500">
       <img src="images/logo/logo2.png" class="h-10 px-2 items-center mx-2" />
       <ul class=" hidden lg:flex px-28 py-2  space-x-12 justify-end">
         <li
@@ -40,11 +38,11 @@
       </ul>
     </nav>
     <main
-      class="bg-gradient-to-tr from-gray-300 to-stone-300 flex justify-around"
+      class="bg-gradient-to-tr from-gray-300 to-stone-300 flex justify-around flex-wrap"
     >
       <!-- Rest of your content here -->
 
-      <div class="content flex-1 p-8 items-center">
+      <div class="content flex-1 p-8 w-[600px] items-center">
         <div
           class="text-6xl px-8 text-clip font-extrabold flex justify-center my-4 animate-none"data-aos="fade-right" data-aos-duration="1500"
         >
@@ -72,10 +70,10 @@
           </button>
         </div>
       </div>
-      <div class="flex-1 items-center">
+      <div class="w-[500px] flex items-end">
         <img
           src="images/img/book1.png"
-          class="h-37 w-30 place-content-stretch"
+          class="h-37 w-30"
           alt=""
           srcset=""
         />
@@ -116,12 +114,12 @@
                 <p class="mt-1">$16.00</p>
               </div>
             </div>
-            <div class="lg:w-1/3 md:w-1/2 p-6 m-2 w-full">
+            <div class="w-[300px] p-6 m-2">
               <a class="block relative h-72 rounded overflow-hidden">
                 <img
                   alt="ecommerce"
-                  class="object-cover object-center w-full h-full block"
-                  src=""
+                  class="w-full h-full"
+                  src="images/img/book3.jpeg"
                 />
               </a>
               <div class="mt-4">
@@ -136,7 +134,7 @@
                 <p class="mt-1">Rs21.15</p>
               </div>
             </div>
-            <div class="lg:w-1/3 md:w-1/2 p-6 m-2 w-full">
+            <!-- <div class="lg:w-1/3 md:w-1/2 p-6 m-2 w-full">
               <a class="block relative h-72 rounded overflow-hidden">
                 <img
                   alt="ecommerce"
@@ -256,7 +254,7 @@
                 <p class="mt-1">$Rs18.40</p>
               </div>
               <!-- Code of the box ends -->
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
