--- a/sign_up.html
+++ b/sign_up.html
@@ -13,7 +13,7 @@
     <div class="login">
         <h1 class="text-center"> Login</h1>
 
-        <form class="need-validation">
+        <form class="need-validation" action="index.html">
             <div class="form-group was-validated">
                 <label class="form-label" for="Username">Email Address</label>
                 <input class="form-control" type="email" id ="email" required>
@@ -34,7 +34,7 @@
                 <input class="form-check-input" type="checkbox" id="check">
                 <label class="form-check-label" for="Check">Remember Me</label>
             </div>
-            <input class="btn btn-success w-" type="submit" value="SIGN IN" onclick="auth()">
+            <input class="btn btn-success w-" type="submit" value="SIGN IN">
     </div>
     
 </body>
