--- a/landing.html
+++ b/landing.html
@@ -87,7 +87,7 @@
 
     <!-- creating another class so that we can give the 
     background image for our bottom page -->
-    <div class="bg-gradient-to-tr from-rose-500 to-rose-400">
+    <div class="bg-gradient-to-tr from-rose-600 to-purple-500">
       <h1
         class="text-6xl px-8 justify-center flex justify-items-center font-extrabold py-12 text-white  transition-shadow text-center delay-100"data-aos="zoom-out-down "data-aos-duration="3000"
       >
@@ -99,7 +99,7 @@
         <div class="container px-5 py-14 my-2 mx-auto">
           <div class="flex flex-wrap -m-4  justify-between space-x-4">
             <div
-              class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl"
+              class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl" data-aos="fade-right" data-aos-duration="1500"
             >
               <a class="block relative h-72 rounded overflow-hidden">
                 <img
@@ -118,7 +118,7 @@
                 <p class="mt-1">Rs 500</p>
               </div>
             </div>
-            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl">
+            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl" data-aos="fade-right" data-aos-duration="1500">
               <a class="block relative h-72 w-48 rounded overflow-hidden">
                 <img
                   alt="ecommerce"
@@ -138,7 +138,7 @@
                 <p class="mt-1">Rs21.15</p>
               </div>
             </div>
-            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl">
+            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl" data-aos="fade-right" data-aos-duration="1500">
               <a class="block relative h-72 rounded overflow-hidden">
                 <img
                   alt="ecommerce"
@@ -160,7 +160,7 @@
             </div>
 
             
-            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl">
+            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl" data-aos="fade-right" data-aos-duration="1500">
               <a class="block relative h-72 rounded overflow-hidden">
                 <img
                   alt="ecommerce"
@@ -180,7 +180,7 @@
                 <p class="mt-1">$18.40</p>
               </div>
             </div>
-            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl">
+            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl" data-aos="fade-right" data-aos-duration="1500">
               <a class="block relative h-72 rounded overflow-hidden">
                 <img
                   alt="ecommerce"
@@ -200,7 +200,7 @@
                 <p class="mt-1">$Rs30.00</p>
               </div>
             </div>
-            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl">
+            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl" data-aos="fade-right" data-aos-duration="1500">
               <a class="block relative h-72 rounded overflow-hidden">
                 <img
                   alt="ecommerce"
@@ -223,7 +223,7 @@
 
 
 
-            <div class="lg:w-1/4 md:w-1/2 p-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl">
+            <div class="lg:w-1/4 md:w-1/2 p-4 w-full rounded-3xl border-spacing-6 shadow-black shadow-2xl" data-aos="fade-right" data-aos-duration="1500">
               <a class="block relative h-72 rounded overflow-hidden">
                 <img
                   alt="ecommerce"
@@ -245,7 +245,7 @@
             </div>
 
 
-            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl  shadow-black shadow-2xl border-spacing-6">
+            <div class="lg:w-1/4 md:w-1/2 p-10 m-4 w-full rounded-3xl  shadow-black shadow-2xl border-spacing-6" data-aos="fade-right" data-aos-duration="1500">
               <a class="block relative h-72 rounded overflow-hidden">
                 <img
                   alt="ecommerce"
