--- a/landing.html
+++ b/landing.html
@@ -430,6 +430,7 @@
         </div>
       </div>
     </footer>
+    <script src="landing.js"></script>
     <!-- Our Aos data -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
