--- a/landing.html
+++ b/landing.html
@@ -61,7 +61,7 @@
         </p>
         <div class="button my-9 px-5 mx-14 flex justify-items-center">
           <button
-            class=" bg-green-600 rounded-2xl text-white hover:bg-blue-600 py-4 px-4 mx-6 transition-all active:bg-blue-700 focus:outline-blue-700"
+            class=" bg-green-600 rounded-2xl text-white hover:bg-blue-600 py-4 px-4 mx-6 transition-all active:bg-blue-700 focus:outline-blue-700"onclick="clicked()"
           >
             Buy Now
           </button>
