--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     
   </head>
   <body>
+    <!-- for nav -->
     <nav class="nav h-[70px] sticky top-0">
   <input type="checkbox" id="nav-check">
   <div class="nav-header">
