--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Miet Bookstore</title>
+    <title>Miet  Bookstore</title>
 
     <link rel="stylesheet" type="text/css" href="styles.css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -45,9 +45,9 @@
     >
       <!-- Rest of your content here -->
 
-      <div class="content w-[500px] flex-col p-8 items-center">
+      <div class="content sm:w-[500px]  flex-col p-8 items-center">
         <div
-          class="text-6xl  text-clip font-extrabold flex justify-items-center animate-none"
+          class="sm:text-6xl text-3xl sm:text-left text-center  font-extrabold flex justify-items-center animate-none"
           data-aos="fade-right"
           data-aos-duration="1500"
         >
