--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <!-- creating another class so that we can give the 
     background image for our bottom page -->
-    <div class="bg-gradient-to-tr from-rose-600 to-purple-500" id="books">
+    <div class="bg-gradient-to-r from-indigo-600 to-indigo-500" id="books">
       <h1
         class="text-6xl px-8 justify-center flex justify-items-center font-extrabold py-12 text-white transition-shadow text-center delay-100"
         data-aos="zoom-out-down "
