--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 
     <!-- creating another class so that we can give the 
     background image for our bottom page -->
-    <div class="bg-gradient-to-tr from-rose-600 to-purple-500" id="books">
+    <div class="bg-slate-200" id="books">
       <h1
-        class="text-6xl px-8 justify-center flex justify-items-center font-extrabold py-12 text-white transition-shadow text-center delay-100"
+        class="text-6xl px-8 justify-center flex justify-items-center font-extrabold py-12 text-black transition-shadow text-center delay-100"
         data-aos="zoom-out-down "
         data-aos-duration="3000"
       >
@@ -103,7 +103,7 @@
               
       <section class="min-h-[60vh] py-[50px] flex justify-evenly flex-wrap gap-[2rem]">
         <div
-          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-black shadow-2xl border-spacing-6"
+          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-xl  border-spacing-6 hover:bg-red-700"
           data-aos="fade-right"
           data-aos-duration="1500"
           data-aos-delay="500"
@@ -126,7 +126,7 @@
           </div>
         </div>
         <div
-          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-black shadow-2xl border-spacing-6"
+          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-xl  border-spacing-6 hover:bg-red-700"
           data-aos="fade-right"
           data-aos-duration="1500"
         >
@@ -148,7 +148,7 @@
           </div>
         </div>
         <div
-          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-black shadow-2xl border-spacing-6"
+          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-xl border-spacing-6 hover:bg-red-700"
           data-aos="fade-right"
           data-aos-duration="1500"
         >
@@ -170,7 +170,7 @@
           </div>
         </div>
         <div
-          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-black shadow-2xl border-spacing-6"
+          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-xl border-spacing-6 hover:bg-red-700"
           data-aos="fade-right"
           data-aos-duration="1500"
         >
@@ -192,7 +192,7 @@
           </div>
         </div>
         <div
-          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-black shadow-2xl border-spacing-6"
+          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-xl border-spacing-6 hover:bg-red-700"
           data-aos="fade-right"
           data-aos-duration="1500"
         >
@@ -214,7 +214,7 @@
           </div>
         </div>
         <div
-          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-black shadow-2xl border-spacing-6"
+          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-xl border-spacing-6 hover:bg-red-700"
           data-aos="fade-right"
           data-aos-duration="1500"
         >
@@ -235,8 +235,8 @@
             <p class="mt-1">$Rs18.40</p>
           </div>
         </div>
-        <div
-          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-black shadow-2xl border-spacing-6"
+        <div 
+          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-xl border-spacing-6 hover:bg-red-700"
           data-aos="fade-right"
           data-aos-duration="1500"
         >
@@ -258,7 +258,7 @@
           </div>
         </div>
         <div
-          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-black shadow-2xl border-spacing-6"
+          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-xl border-spacing-6 hover:bg-red-700"
           data-aos="fade-right"
           data-aos-duration="1500"
         >
@@ -280,7 +280,7 @@
           </div>
         </div>
         <div
-          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-black shadow-2xl border-spacing-6"
+          class="w-[400px] h-[500px] p-10 rounded-3xl shadow-xl border-spacing-6 hover:bg-red-700"
           data-aos="fade-right"
           data-aos-duration="1500"
         >
