--- a/sign_up.html
+++ b/sign_up.html
@@ -17,17 +17,11 @@
             <div class="form-group was-validated">
                 <label class="form-label" for="Username">Email Address</label>
                 <input class="form-control" type="email" id ="email" required>
-                <div class="invalid-feedback">
-                    Please enter your email address
-                </div>
             </div>
 
             <div class="form-group was-validated">
                 <label class="form-label" for="Password">Password</label>
                 <input class="form-control" type="password" id ="password" required>
-                <div class="invalid-feedback">
-                    Please enter your Password
-                </div>
             </div>
 
             <div class="form-group form-check">
@@ -35,7 +29,7 @@
                 <label class="form-check-label" for="Check">Remember Me</label>
             </div>
             <input class="btn btn-success w-" type="submit" value="SIGN IN" onclick="auth()">
+        </form>
     </div>
-    
 </body>
 </html>
