--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="ebook.html">EBooks</a></li>
-          <li><a href="contact.html">Contact</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Book Exhcange</a></li>
+          <li><a href="contact.html">SELL NOW</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="books_exchange.html">Book Exchange</a></li>
         </ul>
       </nav>
 
