--- a/books_exchange.html
+++ b/books_exchange.html
@@ -4,16 +4,48 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" type="text/css" href="styles.css" />
+
   <title>Book Exchange Page</title>
+
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.7/dist/tailwind.min.css" rel="stylesheet">
 </head>
 
 <body>
-    <nav></nav>
+   <!-- for nav -->
+   <nav class="nav h-[70px] sticky top-0">
+    <input type="checkbox" id="nav-check">
+    <div class="nav-header">
+  
+      <!-- for logo -->
+      <div class="nav-title">
+        Miet BookStore
+      </div>
+  
+    </div>
+    <div class="nav-btn">
+      <label for="nav-check">
+        <span></span>
+        <span></span>
+        <span></span>
+      </label>
+    </div>
+    
+    <ul class="nav-list">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="ebook.html">EBooks</a></li>
+      <li><a href="contact.html">SELL NOW</a></li>
+      <li><a href="about.html">About Us</a></li>
+      <li><a href="books_exchange.html">Book Exhcange</a></li>
+  
+    </ul>
+  </nav>
+    
+
   <main class="container mx-auto my-8">
     <h2 class="sm:text-6xl text-2xl font-bold mb-4 flex flex-wrap justify-center">Book Exchange Form</h2>
 
-    <div class="max-w-md mx-auto bg-white rounded-lg shadow-md p-6 border-4 flex  justify-between my-16">
+    <div class="max-w-md mx-auto bg-white rounded-lg shadow-md p-6 border-4 ">
       <form>
         <div class="mb-4 ">
           <label for="bookGiven" class="block text-gray-700 font-bold mb-2">Book You Are Giving</label>
