--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,8 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="ebook.html">EBooks</a></li>
           <li><a href="contact.html">SELL NOW</a></li>
-          <li><a href="#">About Us</a></li>
-          <li><a href="#">Book Exhcange</a></li>
+          <li><a href="about.html">About Us</a></li>
+          <li><a href="contact.html">Book Exchange</a></li>
       
         </ul>
       </nav>
