--- a/ebook.html
+++ b/ebook.html
@@ -36,7 +36,7 @@
         <li><a href="ebook.html">EBooks</a></li>
         <li><a href="contact.html">SELL NOW</a></li>
         <li><a href="#">About Us</a></li>
-        <li><a href="#">Book Exhcange</a></li>      
+        <li><a href="#">Book Exchange</a></li>      
     </ul>
     </nav>
     <div class="bg-gradient-to-tr from-rose-600 to-purple-500" id="books">
