--- a/ebook.html
+++ b/ebook.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <!-- for nav -->
-    <nav class="nav h-[70px] sticky top-0">
+    <nav class="nav h-[70px] ">
         <input type="checkbox" id="nav-check">
         <div class="nav-header">
       
@@ -34,14 +34,14 @@
     <ul class="nav-list">
         <li><a href="index.html">Home</a></li>
         <li><a href="ebook.html">EBooks</a></li>
-        <li><a href="contact.html">SELL NOW</a></li>
+        <li><a href="contact.html">Sell Now</a></li>
         <li><a href="#">About Us</a></li>
-        <li><a href="#">Book Exchange</a></li>      
+        <li><a href="#">Book Exhcange</a></li>      
     </ul>
     </nav>
-    <div class="bg-gradient-to-tr from-rose-600 to-purple-500" id="books">
+    <div class="bg-slate-300" id="books">
         <h1
-          class="text-6xl px-8 justify-center flex justify-items-center font-extrabold py-12 text-white transition-shadow text-center delay-100"
+          class="text-6xl px-8 justify-center flex justify-items-center font-extrabold py-12 text-black transition-shadow text-center delay-100"
           data-aos="zoom-out-down "
           data-aos-duration="3000"
         >
