--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
             <h2 class="text-gray-900 title-font text-lg font-medium">
               The 400 Blows
             </h2>
-            <p class="mt-1">$Rs18.40</p>
+            <p class="mt-1">Rs18.40</p>
           </div>
         </div>
         <div
