--- a/index.html
+++ b/index.html
@@ -517,16 +517,16 @@
             </h2>
             <nav class="list-none mb-10">
               <li>
-                <a class="text-gray-600 hover:text-gray-800">First Link</a>
+                <a class="text-gray-600 hover:text-gray-800">Ebooks</a>
               </li>
               <li>
-                <a class="text-gray-600 hover:text-gray-800">Second Link</a>
+                <a class="text-gray-600 hover:text-gray-800">Home</a>
               </li>
               <li>
-                <a class="text-gray-600 hover:text-gray-800">Third Link</a>
+                <a class="text-gray-600 hover:text-gray-800">About</a>
               </li>
               <li>
-                <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
+                <a class="text-gray-600 hover:text-gray-800">Contact Us</a>
               </li>
             </nav>
           </div>
@@ -534,106 +534,8 @@
             <h2
               class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
             >
-              CATEGORIES
-            </h2>
-            <nav class="list-none mb-10">
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">First Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Second Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Third Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
-              </li>
-            </nav>
-          </div>
-          <div class="lg:w-1/6 md:w-1/2 w-full px-4">
-            <h2
-              class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-            >
-              CATEGORIES
-            </h2>
-            <nav class="list-none mb-10">
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">First Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Second Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Third Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
-              </li>
-            </nav>
-          </div>
-          <div class="lg:w-1/6 md:w-1/2 w-full px-4">
-            <h2
-              class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-            >
-              CATEGORIES
-            </h2>
-            <nav class="list-none mb-10">
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">First Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Second Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Third Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
-              </li>
-            </nav>
-          </div>
-          <div class="lg:w-1/6 md:w-1/2 w-full px-4">
-            <h2
-              class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-            >
-              CATEGORIES
-            </h2>
-            <nav class="list-none mb-10">
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">First Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Second Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Third Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
-              </li>
-            </nav>
-          </div>
-          <div class="lg:w-1/6 md:w-1/2 w-full px-4">
-            <h2
-              class="title-font font-medium text-gray-900 tracking-widest text-sm mb-3"
-            >
-              CATEGORIES
-            </h2>
-            <nav class="list-none mb-10">
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">First Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Second Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Third Link</a>
-              </li>
-              <li>
-                <a class="text-gray-600 hover:text-gray-800">Fourth Link</a>
-              </li>
-            </nav>
+              
+           
           </div>
         </div>
       </div>
@@ -644,7 +546,7 @@
           >
             <div class="relative sm:w-64 w-40 sm:mr-4 mr-2">
               <label for="footer-field" class="leading-7 text-sm text-gray-600"
-                >Placeholder</label
+                >Suscribe our newsletter</label
               >
               <input
                 type="text"
@@ -656,13 +558,13 @@
             <button
               class="inline-flex text-white bg-indigo-500 border-0 py-2 px-6 focus:outline-none hover:bg-indigo-600 rounded"
             >
-              Button
+              Subscribe
             </button>
             <p
               class="text-gray-500 text-sm md:ml-6 md:mt-0 mt-2 sm:text-left text-center"
             >
-              Bitters chicharrones fanny pack
-              <br class="lg:block hidden" />waistcoat green juice
+Hackathon2023
+              <br class="lg:block hidden" />
             </p>
           </div>
           <span
@@ -737,18 +639,18 @@
           class="container mx-auto py-4 px-5 flex flex-wrap flex-col sm:flex-row"
         >
           <p class="text-gray-500 text-sm text-center sm:text-left">
-            © 2020 Tailblocks —
+            © 2023 Miet Team16
             <a
-              href="https://twitter.com/knyttneve"
+              href="https://twitter.com/_yours_himanshu"
               class="text-gray-600 ml-1"
               target="_blank"
               rel="noopener noreferrer"
-              >@knyttneve</a
+              >@_yours_himanshu</a
             >
           </p>
           <span
             class="sm:ml-auto sm:mt-0 mt-2 sm:w-auto w-full sm:text-left text-center text-gray-500 text-sm"
-            >Enamel pin tousled raclette tacos irony</span
+            >Team16</span
           >
         </div>
       </div>
