--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="ebook.html">EBooks</a></li>
-          <li><a href="contact.html">SELL NOW</a></li>
+          <li><a href="contact.html">Sell Now</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="books_exchange.html">Book Exchange</a></li>
         </ul>
@@ -44,7 +44,8 @@
             <h1 class="text-6xl text-red-600 flex justify-center gap-5"  data-aos="fade-right"
             data-aos-duration="1500"
             >About Us</h1>
-            <p class="leading-relaxed text-lg flex text-center justify-between mt-6 text-black">Welcome to our online bookstore specializing in second-hand books! At [Your Bookstore Name], we are passionate about connecting book lovers with their favorite stories and providing a sustainable option for book buying.
+            <p class="leading-relaxed text-lg flex text-center justify-between mt-6 text-black" data-aos="fade-right"
+            data-aos-duration="1500">Welcome to our online bookstore specializing in second-hand books! At [Your Bookstore Name], we are passionate about connecting book lovers with their favorite stories and providing a sustainable option for book buying.
               
               Our Mission
               Our mission is to promote the joy of reading and encourage the reuse of books by creating a platform where book enthusiasts can discover and purchase high-quality second-hand books. We believe that every book has a story to tell, and by giving them a second life, we contribute to reducing waste and preserving our environment.
@@ -83,7 +84,8 @@
                           </div>
                           <div class="flex flex-wrap -m-2">
                             <div class="p-2 lg:w-1/3 md:w-1/2 w-full">
-                              <div class="h-full flex items-center border-gray-200  bg-indigo-600 border p-4 rounded-lg">
+                              <div class="h-full flex items-center border-gray-200  bg-indigo-600 border p-4 rounded-lg data-aos="fade-right"
+                              data-aos-duration="1500"">
                                 <img alt="team" class="w-16 h-16 bg-gray-100 object-cover object-center flex-shrink-0 rounded-full mr-4" src="https://dummyimage.com/80x80">
                                 <div class="flex-grow">
                                   <h2 class="text-white title-font font-medium">Vishesh Jindal</h2>
@@ -112,5 +114,10 @@
                           </div>
                         </div>
                       </section>
+                       <!-- Our Aos data -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
                 </body>
                 </html>
