--- a/ebook.html
+++ b/ebook.html
@@ -35,8 +35,8 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="ebook.html">EBooks</a></li>
         <li><a href="contact.html">Sell Now</a></li>
-        <li><a href="#">About Us</a></li>
-        <li><a href="#">Book Exhcange</a></li>      
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="books_exchange.html">Book Exhcange</a></li>      
     </ul>
     </nav>
     <div class="bg-slate-300" id="books">
