--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,7 @@
         <ul class="nav-list">
           <li><a href="index.html">Home</a></li>
           <li><a href="ebook.html">EBooks</a></li>
-          <li><a href="contact.html">SELL NOW</a></li>
+          <li><a href="bookcard.html">Sell Now</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="books_exchange.html">Book Exhcange</a></li>
       
